--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,20 @@ h3{
    	margin-right: 10px;
    	
    }
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
    .footer-basic .copyright {
   margin-top:15px;
   text-align:center;
